# galToolbox_utils

./: CMakeLists.txt
.github/workflows/: build-and-test.yml
cmake/: fmtlib.cmake  google-test.cmake
include/utils/: assert.hpp  concepts.hpp  macro.hpp  random.hpp  sequence_invoker.hpp  tuple_maker.hpp
src/: assert.cpp
test/: CMakeLists.txt
test/src/: test_random.cpp
